[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vxug-scraper"
version = "1.0.0"
description = "Bulk downloader for VX-Underground malware research archive — Cloudflare bypass via real Edge session"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydoll-python>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "rich>=13.0.0",
]

[project.scripts]
vxdl     = "vxdl:main"
vxreport = "report:main"

[project.urls]
Repository = "https://github.com/YOUR_USER/vxug-scraper"

[tool.setuptools.packages.find]
where = ["."]
include = ["vxdl*", "report*", "watchdog*", "launch*"]
